--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,55 @@ legend {
   position: absolute;
   top: -12px;
   left: 10px;
-  font-size: 18px;
+  font-size: 0.9em;
   z-index: 10;
 }
 .input-group {
   position: relative;
   margin-bottom: 25px;
+}
+.input-group label {
+  position: absolute;
+  left: 15px;
+  top: 12px;
+  color: #aaa;
+  font-size: 1em;
+  transition: all 0.2 ease-out;
+  pointer-events: none;
+}
+.input-group input[type="text"],
+.input-group input[type="email"],
+.input-group input[type="tel"] {
+  width: calc(100%-30px);
+  padding: 12px 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #fff;
+}
+.input-group.focused label,
+.input-group.has-content label {
+  top: -10px;
+  font-size: 0.8em;
+  color: rgb(107, 107, 224);
+  background-color: white;
+  padding: 0 5px;
+  left: 10px;
+}
+.input-group input:focus {
+  outline: none;
+  border-color: rgb(107, 107, 224);
+  box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.25);
+}
+button {
+  background-color: rgb(107, 107, 224);
+  color: white;
+  padding: 7px 12px;
+  border: none;
+  border-radius: 4px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+button:hover {
+  background-color: rgb(55, 55, 127);
 }
